--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.10.4
+  sdk: '>=3.10.4 <4.0.0'
 
 dependencies:
   flutter:
@@ -13,6 +13,7 @@ dependencies:
   shared_preferences: ^2.5.4
   flutter_tts: ^4.2.3
   flutter_native_splash: ^2.4.7
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
@@ -31,11 +32,12 @@ flutter_launcher_icons:
   image_path: "assets/icon.png"
   adaptive_icon_background: "#001B3D"
   adaptive_icon_foreground: "assets/icon.png"
-  
+
 flutter_native_splash:
   color: "#001B3D"
   image: assets/icon.png
   android_12:
     image: assets/icon.png
     color: "#001B3D"
+  web: false
   fullscreen: true
