--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,8 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.6'
           channel: 'stable'
-          cache: true
+          cache: false
 
       - name: Install dependencies
         run: flutter pub get
