--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "bizlingo",
-    "short_name": "bizlingo",
+    "name": "BizLingo AI",
+    "short_name": "BizLingo",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#001B3D",
+    "theme_color": "#001B3D",
+    "description": "Master Business English and German with AI-powered feedback.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
